--- a/ip-mapper.service
+++ b/ip-mapper.service
@@ -6,8 +6,8 @@ PartOf=docker.service
 
 [Service]
 Type=simple
-WorkingDirectory=/scripts
-ExecStart=bash /scripts/ip-mapper.sh
+WorkingDirectory=/root/ip-mapper
+ExecStart=bash /root/ip-mapper/ip-mapper.sh
 Restart=on-failure
 StartLimitInterval=180
 StartLimitBurst=30
